# coupon-now

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  compose.yaml  pyproject.toml
apps/web/: .env.example  README.md  package-lock.json  package.json
apps/web/public/: llms-full.txt  llms.txt
apps/web/scripts/: generate-fixtures.mjs
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/about/: page.tsx
apps/web/src/app/contact/: page.tsx
apps/web/src/app/disclosure/: page.tsx
apps/web/src/app/merchant/[slug]/: page.tsx
apps/web/src/app/privacy/: page.tsx
apps/web/src/app/search/: page.tsx
apps/web/src/app/terms/: page.tsx
apps/web/src/components/: CopyCodeButton.tsx  CouponCard.tsx  CouponFeed.tsx  MerchantFAQ.tsx  MerchantHeader.tsx  SearchBar.tsx  SiteFooter.tsx  SiteHeader.tsx
apps/web/src/components/ui/: animated-gradient-text.tsx  card.tsx
apps/web/src/fixtures/: categories.json  coupons.json  merchants.json
apps/web/src/lib/: utils.ts
apps/web/src/lib/data/: index.ts  search.ts  types.ts
apps/web/src/lib/seo/: jsonld.ts  metadata.ts
docs/adr/: 0001-initial-monorepo-shape.md
docs/agents/: domain.md  frontend-design-guidelines.md  issue-tracker.md  triage-labels.md
docs/project/: brief.md
infra/postgres/: README.md
services/etl/: README.md  pyproject.toml
services/etl/src/coupon_now_etl/: __init__.py
services/etl/src/coupon_now_etl/pipelines/: README.md
services/etl/src/coupon_now_etl/providers/: README.md
services/etl/src/coupon_now_etl/storage/: README.md
services/etl/tests/: test_etl_package.py
services/mcp-app/: README.md  alembic.ini  pyproject.toml
services/mcp-app/migrations/: env.py  script.py.mako
services/mcp-app/migrations/versions/: 0001_create_coupon_read_tables.py
services/mcp-app/src/coupon_now_mcp/: __init__.py  config.py  schemas.py  server.py  service.py
services/mcp-app/src/coupon_now_mcp/prompts/: README.md  __init__.py  coupon_search.py
services/mcp-app/src/coupon_now_mcp/resources/: README.md
services/mcp-app/src/coupon_now_mcp/storage/: README.md  __init__.py  database.py  models.py  repositories.py
services/mcp-app/src/coupon_now_mcp/tools/: README.md  __init__.py  coupons.py
services/mcp-app/tests/: test_config.py  test_mcp_package.py  test_migrations.py  test_repositories.py  test_schemas.py  test_server.py  test_service.py
