[project]
name = "coupon-now"
version = "0.1.0"
description = "Monorepo for Coupon Now ETL and MCP app."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.13.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "services/etl",
    "services/mcp-app",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["services"]
pythonpath = [
    "services/etl/src",
    "services/mcp-app/src",
]
