[project]
name = "coupon-now-mcp-app"
version = "0.1.0"
description = "FastMCP app for AI-client coupon search."
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

