[project]
name = "coupon-now-mcp-app"
version = "0.1.0"
description = "FastMCP app for AI-client coupon search."
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastmcp>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.39",
]

[project.scripts]
coupon-now-mcp = "coupon_now_mcp.server:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coupon_now_mcp"]
